<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/yearmonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearmonth"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="160sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/week"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nongli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nongli"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shift1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift1"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shift2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shift3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shift4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift4"
        android:textSize="18sp" />

</LinearLayout>